--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_OMDBAPI_KEY=
 REACT_APP_OMDBAPI_URL=https://www.omdbapi.com
 REACT_APP_REEL_REVIEWS_API_URL=http://localhost:5000/favorite
+REACT_APP_NO_MOVIE_POSTER_IMAGE_URL=https://www.123movies.love/images/imdbnoimage.jpg
